Before remodeling models

--- a/views/new-comment.ejs
+++ b/views/new-comment.ejs
@@ -3,7 +3,7 @@
   <h1>Leave a comment</h1>
 
   <form action="/campgrounds/<%= campground._id %>/comments" method="POST">
-    <input type="text" placeholder="Enter Author Name" name="author">
+    <!-- <input type="text" placeholder="Enter Author Name" name="author"> -->
     <input type="text" placeholder="Enter Comment" name="content">
     <input type="submit">
   </form>
