--- a/views/show.ejs
+++ b/views/show.ejs
@@ -17,6 +17,10 @@
         </strong> -
         <%= comment.author %>
       </p>
+      <a href="/campgrounds/<%= campground._id %>/edit" class="btn btn-warning">Edit Campground</a>
+      <form action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
+        <input type="submit" value="Delete Campground" class="btn btn-danger">
+      </form>
       <a href="/campgrounds/<%=campground._id %>/comments/new">Leave a comment</a>
     </div>
     <%  }); %>
